@@ -50,8 +50,8 @@ foreach($strings as $string) {
 %unicode|string%(16) "266561637574653b"
 %unicode|string%(0) ""
 %unicode|string%(0) ""
-%unicode|string%(8) "f7bfbfbf"
-%unicode|string%(8) "f7bfbfbf"
+%unicode|string%(0) ""
+%unicode|string%(0) ""
 %unicode|string%(0) ""
 %unicode|string%(0) ""
 %unicode|string%(0) ""
